# aitrack_linux

./: CMakeLists.txt
AITracker/src/: filters.cpp  model.cpp  model.h
Client/src/: Main.cpp
Client/src/camera/: Camera.h  CameraFactory.cpp  CameraFactory.h  NullCamera.h  OCVCamera.cpp  OCVCamera.cpp.bck  OCVCamera.h  OCVCameraGPT.cpp  OCVCamera_BCK.cpp  Ps3Camera.cpp  Ps3Camera.h
Client/src/model/: UDPSender.cpp  UDPSender.h  UpdateChecker.cpp  UpdateChecker.h
Client/src/presenter/: presenter.cpp  presenter.h
Client/src/view/: WindowMain.cpp  WindowMain.h
PS3Driver/src/: ps3eye.cpp  ps3eye.h
